force-app/main/default/objects/SalesforceContract__x/SalesforceContract__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceContract</externalName>
    <label>Contratto Salesforce</label>
    <pluralLabel>Contratti Salesforce</pluralLabel>
</CustomObject>