force-app/main/default/objects/SalesforceContract__x/fields/Bil_ActivationDateC__c.field-meta.xml
<CustomField>
    <fullName>Bil_ActivationDateC__c</fullName>
    <description>Bil_ActivationDateC</description>
    <externalDeveloperName>Bil_ActivationDateC</externalDeveloperName>
    <label>Data Attivazione</label>
    <type>DateTime</type>
</CustomField>