force-app/main/default/objects/SalesforceContract__x/fields/Bil_BankAccountSignatoryFiscalCodeC__c.field-meta.xml
<CustomField>
    <fullName>Bil_BankAccountSignatoryFiscalCodeC__c</fullName>
    <description>Bil_BankAccountSignatoryFiscalCodeC</description>
    <externalDeveloperName>Bil_BankAccountSignatoryFiscalCodeC</externalDeveloperName>
    <label>Codice Fiscale Sottoscrittore CC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>