force-app/main/default/objects/SalesforceContract__x/fields/Bil_BankAgencyC__c.field-meta.xml
<CustomField>
    <fullName>Bil_BankAgencyC__c</fullName>
    <description>Bil_BankAgencyC</description>
    <externalDeveloperName>Bil_BankAgencyC</externalDeveloperName>
    <label>Agenzia banca</label>
    <length>100</length>
    <type>Text</type>
</CustomField>