force-app/main/default/objects/SalesforceContract__x/fields/Bil_BillSendingMethodC__c.field-meta.xml
<CustomField>
    <fullName>Bil_BillSendingMethodC__c</fullName>
    <description>Bil_BillSendingMethodC</description>
    <externalDeveloperName>Bil_BillSendingMethodC</externalDeveloperName>
    <label>Modalità invio bolletta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>