force-app/main/default/objects/SalesforceContract__x/fields/Bil_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Bil_Contact_Name__c</fullName>
    <description>Bil_Contact_Name</description>
    <externalDeveloperName>Bil_Contact_Name</externalDeveloperName>
    <label>Bil_Contact_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>