force-app/main/default/objects/SalesforceContract__x/fields/Bil_InvoicingAddessIsForeignC__c.field-meta.xml
<CustomField>
    <fullName>Bil_InvoicingAddessIsForeignC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bil_InvoicingAddessIsForeignC</description>
    <externalDeveloperName>Bil_InvoicingAddessIsForeignC</externalDeveloperName>
    <label>Indirizzo Estero</label>
    <type>Checkbox</type>
</CustomField>