force-app/main/default/objects/SalesforceContract__x/fields/Bil_LastModifiedBy_Name__c.field-meta.xml
<CustomField>
    <fullName>Bil_LastModifiedBy_Name__c</fullName>
    <description>Bil_LastModifiedBy_Name</description>
    <externalDeveloperName>Bil_LastModifiedBy_Name</externalDeveloperName>
    <label>Bil_LastModifiedBy_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>