force-app/main/default/objects/SalesforceContract__x/fields/Bil_LegalAgent_Name__c.field-meta.xml
<CustomField>
    <fullName>Bil_LegalAgent_Name__c</fullName>
    <description>Bil_LegalAgent_Name</description>
    <externalDeveloperName>Bil_LegalAgent_Name</externalDeveloperName>
    <label>Rappresentate Legale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>