force-app/main/default/objects/SalesforceContract__x/fields/Bil_Name__c.field-meta.xml
<CustomField>
    <fullName>Bil_Name__c</fullName>
    <description>Bil_Name</description>
    <externalDeveloperName>Bil_Name</externalDeveloperName>
    <label>Bil_Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>