force-app/main/default/objects/SalesforceContract__x/fields/Con_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Con_Account_Name__c</fullName>
    <description>Con_Account_Name</description>
    <externalDeveloperName>Con_Account_Name</externalDeveloperName>
    <label>Con_Account_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>