force-app/main/default/objects/SalesforceContract__x/fields/Con_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Con_AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Con_AccountId</description>
    <externalDeveloperName>Con_AccountId</externalDeveloperName>
    <label>Titolare Online</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratti Salesforce</relationshipLabel>
    <relationshipName>ContrattiSalesforce</relationshipName>
    <type>Lookup</type>
</CustomField>