force-app/main/default/objects/SalesforceContract__x/fields/Con_ActivatedDate__c.field-meta.xml
<CustomField>
    <fullName>Con_ActivatedDate__c</fullName>
    <description>Con_ActivatedDate</description>
    <externalDeveloperName>Con_ActivatedDate</externalDeveloperName>
    <label>Con_ActivatedDate</label>
    <type>DateTime</type>
</CustomField>