force-app/main/default/objects/SalesforceContract__x/fields/Con_ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>Con_ContractNumber__c</fullName>
    <description>Con_ContractNumber</description>
    <externalDeveloperName>Con_ContractNumber</externalDeveloperName>
    <label>Con_ContractNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>