force-app/main/default/objects/SalesforceContract__x/fields/Con_Description__c.field-meta.xml
<CustomField>
    <fullName>Con_Description__c</fullName>
    <description>Con_Description</description>
    <externalDeveloperName>Con_Description</externalDeveloperName>
    <label>Con_Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>