force-app/main/default/objects/SalesforceContract__x/fields/Con_InvoicingPeriodC__c.field-meta.xml
<CustomField>
    <fullName>Con_InvoicingPeriodC__c</fullName>
    <description>Con_InvoicingPeriodC</description>
    <externalDeveloperName>Con_InvoicingPeriodC</externalDeveloperName>
    <label>Periodicità Di Fatturazione</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>