force-app/main/default/objects/SalesforceContract__x/fields/Con_InvoicingPeriodDescriptionC__c.field-meta.xml
<CustomField>
    <fullName>Con_InvoicingPeriodDescriptionC__c</fullName>
    <description>Con_InvoicingPeriodDescriptionC</description>
    <externalDeveloperName>Con_InvoicingPeriodDescriptionC</externalDeveloperName>
    <label>Con_InvoicingPeriodDescriptionC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>