force-app/main/default/objects/SalesforceContract__x/fields/Con_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>Con_LastModifiedDate__c</fullName>
    <description>Con_LastModifiedDate</description>
    <externalDeveloperName>Con_LastModifiedDate</externalDeveloperName>
    <label>Con_LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>