force-app/main/default/objects/SalesforceContract__x/fields/Con_MarkForRenewalC__c.field-meta.xml
<CustomField>
    <fullName>Con_MarkForRenewalC__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>MarkForRenewalC</externalDeveloperName>
    <label>Marca Per Il Rinnovo</label>
    <type>Checkbox</type>
</CustomField>