force-app/main/default/objects/SalesforceContract__x/fields/Con_MeterReadingUnitC__c.field-meta.xml
<CustomField>
    <fullName>Con_MeterReadingUnitC__c</fullName>
    <externalDeveloperName>MeterReadingUnitC</externalDeveloperName>
    <label>Unità Di Lettura (MRU)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>