force-app/main/default/objects/SalesforceContract__x/fields/Con_Name__c.field-meta.xml
<CustomField>
    <fullName>Con_Name__c</fullName>
    <description>Con_Name</description>
    <externalDeveloperName>Con_Name</externalDeveloperName>
    <label>Con_Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>