force-app/main/default/objects/SalesforceContract__x/fields/Con_OldContractMoMiC__c.field-meta.xml
<CustomField>
    <fullName>Con_OldContractMoMiC__c</fullName>
    <externalDeveloperName>OldContractMoMiC</externalDeveloperName>
    <label>Contratto Old MoMi</label>
    <length>50</length>
    <type>Text</type>
</CustomField>