force-app/main/default/objects/SalesforceContract__x/fields/Con_OriginalBailmentC__c.field-meta.xml
<CustomField>
    <fullName>Con_OriginalBailmentC__c</fullName>
    <externalDeveloperName>OriginalBailmentC</externalDeveloperName>
    <label>Deposito originario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>