force-app/main/default/objects/SalesforceContract__x/fields/Con_PurchaseDatec__c.field-meta.xml
<CustomField>
    <fullName>Con_PurchaseDatec__c</fullName>
    <externalDeveloperName>PurchaseDatec</externalDeveloperName>
    <label>Data Stipula Contratto</label>
    <type>Date</type>
</CustomField>