force-app/main/default/objects/SalesforceContract__x/fields/Con_RowIdSiebelC__c.field-meta.xml
<CustomField>
    <fullName>Con_RowIdSiebelC__c</fullName>
    <description>Con_RowIdSiebelC</description>
    <externalDeveloperName>Con_RowIdSiebelC</externalDeveloperName>
    <label>Recor Correlato SIEBEL</label>
    <length>15</length>
    <type>Text</type>
</CustomField>