force-app/main/default/objects/SalesforceContract__x/fields/Con_SBQQ_EvergreenC__c.field-meta.xml
<CustomField>
    <fullName>Con_SBQQ_EvergreenC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Con_SBQQ_EvergreenC</description>
    <externalDeveloperName>Con_SBQQ_EvergreenC</externalDeveloperName>
    <label>Con_SBQQ_EvergreenC</label>
    <type>Checkbox</type>
</CustomField>