force-app/main/default/objects/SalesforceContract__x/fields/Con_SBQQ_ExpirationDateC__c.field-meta.xml
<CustomField>
    <fullName>Con_SBQQ_ExpirationDateC__c</fullName>
    <description>Con_SBQQ_ExpirationDateC</description>
    <externalDeveloperName>Con_SBQQ_ExpirationDateC</externalDeveloperName>
    <label>Con_SBQQ_ExpirationDateC</label>
    <type>DateTime</type>
</CustomField>