force-app/main/default/objects/SalesforceContract__x/fields/Con_SBQQ_MasterContractC__c.field-meta.xml
<CustomField>
    <fullName>Con_SBQQ_MasterContractC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Con_SBQQ_MasterContractC</description>
    <externalDeveloperName>Con_SBQQ_MasterContractC</externalDeveloperName>
    <label>Con_SBQQ_MasterContractC</label>
    <type>Checkbox</type>
</CustomField>