force-app/main/default/objects/SalesforceContract__x/fields/Con_SBQQ_OrderC__c.field-meta.xml
<CustomField>
    <fullName>Con_SBQQ_OrderC__c</fullName>
    <description>Con_SBQQ_OrderC</description>
    <externalDeveloperName>Con_SBQQ_OrderC</externalDeveloperName>
    <label>Con_SBQQ_OrderC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>