force-app/main/default/objects/SalesforceContract__x/fields/Con_SBQQ_SubscriptionQuantitiesCombinedC__c.field-meta.xml
<CustomField>
    <fullName>Con_SBQQ_SubscriptionQuantitiesCombinedC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Con_SBQQ_SubscriptionQuantitiesCombinedC</description>
    <externalDeveloperName>Con_SBQQ_SubscriptionQuantitiesCombinedC</externalDeveloperName>
    <label>Con_SBQQ_SubscriptionQuantitiesCombinedC</label>
    <type>Checkbox</type>
</CustomField>