force-app/main/default/objects/SalesforceContract__x/fields/Con_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Con_StartDate__c</fullName>
    <description>Con_StartDate</description>
    <externalDeveloperName>Con_StartDate</externalDeveloperName>
    <label>Con_StartDate</label>
    <type>DateTime</type>
</CustomField>