force-app/main/default/objects/SalesforceContract__x/fields/Ser_AlignmentFrequencyGAAC__c.field-meta.xml
<CustomField>
    <fullName>Ser_AlignmentFrequencyGAAC__c</fullName>
    <description>Ser_AlignmentFrequencyGAAC</description>
    <externalDeveloperName>Ser_AlignmentFrequencyGAAC</externalDeveloperName>
    <label>Frequenza allineamento GAA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>