force-app/main/default/objects/SalesforceContract__x/fields/Ser_AuthorizedNotToConferC__c.field-meta.xml
<CustomField>
    <fullName>Ser_AuthorizedNotToConferC__c</fullName>
    <description>Ser_AuthorizedNotToConferC</description>
    <externalDeveloperName>Ser_AuthorizedNotToConferC</externalDeveloperName>
    <label>Autorizzato a non conferire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>