force-app/main/default/objects/SalesforceContract__x/fields/Ser_HydrantMouthsNumberC__c.field-meta.xml
<CustomField>
    <fullName>Ser_HydrantMouthsNumberC__c</fullName>
    <description>Ser_HydrantMouthsNumberC</description>
    <externalDeveloperName>Ser_HydrantMouthsNumberC</externalDeveloperName>
    <label>Numero Bocche Idrante</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>