force-app/main/default/objects/SalesforceContract__x/fields/Ser_Id__c.field-meta.xml
<CustomField>
    <fullName>Ser_Id__c</fullName>
    <description>Ser_Id</description>
    <externalDeveloperName>Ser_Id</externalDeveloperName>
    <label>Ser_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>