force-app/main/default/objects/SalesforceContract__x/fields/Ser_ImplantTypeGenC__c.field-meta.xml
<CustomField>
    <fullName>Ser_ImplantTypeGenC__c</fullName>
    <description>Ser_ImplantTypeGenC</description>
    <externalDeveloperName>Ser_ImplantTypeGenC</externalDeveloperName>
    <label>Ser_ImplantTypeGenC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>