force-app/main/default/objects/SalesforceContract__x/fields/Ser_MethodsForOutgoingPaymentsC__c.field-meta.xml
<CustomField>
    <fullName>Ser_MethodsForOutgoingPaymentsC__c</fullName>
    <description>Ser_MethodsForOutgoingPaymentsC</description>
    <externalDeveloperName>Ser_MethodsForOutgoingPaymentsC</externalDeveloperName>
    <label>Ser_MethodsForOutgoingPaymentsC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>