force-app/main/default/objects/SalesforceContract__x/fields/Ser_NumberOfFamilyMembersC__c.field-meta.xml
<CustomField>
    <fullName>Ser_NumberOfFamilyMembersC__c</fullName>
    <description>Ser_NumberOfFamilyMembersC</description>
    <externalDeveloperName>Ser_NumberOfFamilyMembersC</externalDeveloperName>
    <label>Ser_NumberOfFamilyMembersC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>