force-app/main/default/objects/SalesforceContract__x/fields/Ser_SubscriberCustomerCodeC__c.field-meta.xml
<CustomField>
    <fullName>Ser_SubscriberCustomerCodeC__c</fullName>
    <description>Ser_SubscriberCustomerCodeC</description>
    <externalDeveloperName>Ser_SubscriberCustomerCodeC</externalDeveloperName>
    <label>Ser_SubscriberCustomerCodeC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>