force-app/main/default/objects/SalesforceContract__x/fields/Ser_SupplyAddressC__c.field-meta.xml
<CustomField>
    <fullName>Ser_SupplyAddressC__c</fullName>
    <description>Ser_SupplyAddressC</description>
    <externalDeveloperName>Ser_SupplyAddressC</externalDeveloperName>
    <label>Indirizzo [Fornitura]</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>