force-app/main/default/objects/SalesforceContract__x/fields/Ser_SupplySubtypeC__c.field-meta.xml
<CustomField>
    <fullName>Ser_SupplySubtypeC__c</fullName>
    <description>Ser_SupplySubtypeC</description>
    <externalDeveloperName>Ser_SupplySubtypeC</externalDeveloperName>
    <label>Sottotipologia d&apos;uso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>