force-app/main/default/objects/SalesforceContract__x/fields/Ser_SwitchInWinbackC__c.field-meta.xml
<CustomField>
    <fullName>Ser_SwitchInWinbackC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ser_SwitchInWinbackC</description>
    <externalDeveloperName>Ser_SwitchInWinbackC</externalDeveloperName>
    <label>SwitchIn Winback</label>
    <type>Checkbox</type>
</CustomField>