force-app/main/default/objects/SalesforceContract__x/fields/TitolareSalesforce__c.field-meta.xml
<CustomField>
    <fullName>TitolareSalesforce__c</fullName>
    <externalDeveloperName>Con_AccountId</externalDeveloperName>
    <label>Titolare Salesforce</label>
    <length>18</length>
    <referenceTo>SalesforceCustomer__x</referenceTo>
    <relationshipLabel>Contratti Salesforce</relationshipLabel>
    <relationshipName>ContrattiSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>